Bug 137935 - Unchecking use Skia For all Rendering isn't stored, it's activated again after restart
Summary: Unchecking use Skia For all Rendering isn't stored, it's activated again afte...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.0.0.beta2
Keywords: bibisected, bisected, regression
: 137934 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-11-02 13:37 UTC by Telesto
Modified: 2020-12-02 13:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-11-02 13:37:02 UTC
Description:
Unchecking use Skia For all Rendering isn't stored, it's activated again after restart

Steps to Reproduce:
1. Tools -> options -> View
2. Uncheck use Skia For all Rendering

Actual Results:
Not able to disable, always on

Expected Results:
Should be possible to disable


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: ec1f4d3253963ac16d638734ac70dde033e82154
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL
Comment 1 Roman Kuznetsov 2020-11-03 21:43:57 UTC
confirm in

Version: 7.1.0.0.alpha1+ (x64)
Build ID: bd8edf5d2ac579e51bfbf5fa6061909a67a309c7
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 2 Luboš Luňák 2020-11-13 15:42:21 UTC
I cannot reproduce, disabling and enabling works fine here.
Comment 3 Attila Baraksó (NISZ) 2020-11-17 09:07:13 UTC
Work's fine in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: ec1f4d3253963ac16d638734ac70dde033e82154
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

and in:

Version: 7.1.0.0.alpha1+ (x64)
Build ID: 312a33b7636334f6ce3b6d1702bc5d3e45215601
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 4 Telesto 2020-11-30 14:14:51 UTC
Version: 7.2.0.0.alpha0+ (x64)
Build ID: 32fdb8eb3506bc8dcf013cc713fe8e5debceb940
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL

1. Tools -> options -> View
2. Uncheck use Skia For all Rendering
3. Press Apply
4. press Restart

It's working if you use OK instead of Apply
Comment 5 Attila Baraksó (NISZ) 2020-11-30 15:16:17 UTC
(In reply to Telesto from comment #4)
> It's working if you use OK instead of Apply

Reproduced in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: a45ea4f7939e7ca2e5c071ad209c957702b527e6
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded
Comment 6 Attila Baraksó (NISZ) 2020-11-30 15:40:53 UTC
Bibisected using bibisect-win64-7.1 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit?id=78c6e88e163f50eccc1cebdb2defe9ec4af248ce
author: Caolán McNamara <caolanm@redhat.com>
committer: Caolán McNamara <caolanm@redhat.com>
summary: have just the one handler for ok/apply options

Adding Cc: Caolán McNamara
Comment 7 Telesto 2020-11-30 18:45:48 UTC
Removing from Skia meta bug, not as such Skia related
Comment 8 Telesto 2020-11-30 19:01:17 UTC
*** Bug 137934 has been marked as a duplicate of this bug. ***
Comment 9 Luboš Luňák 2020-11-30 19:16:37 UTC
That bisect is probably just coincidental, https://gerrit.libreoffice.org/c/core/+/106900 should fix this.
Comment 10 Commit Notification 2020-12-01 10:16:40 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/414930465e86e898a2493f61e4832f9a841ebe00

drop the needless and broken SkiaConfig abstraction (tdf#137935)

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2020-12-01 12:09:38 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/33e1a54ea845f263fa417d5fda4baee26c1cc519

drop the needless and broken SkiaConfig abstraction (tdf#137935)

It will be available in 7.1.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Attila Baraksó (NISZ) 2020-12-02 13:24:23 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 761a672d62df1891b9f4f367a499b220ab2b33fa
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

@Luboš: Thanks for fixint this issue!