drop the needless and broken SkiaConfig abstraction (tdf#137935)

I originally copy&pasted this from the OpenGL setting, but this appears
to be just an unnecessary complication. Both the option and writing
is in fact simple, and trying to make it abstract and complicated
doesn't provide much, and it causes the options not saved if only
'Apply' is used in the config dialog.

Change-Id: Ibd55052467988b54429358567d70cbfbb0a34653