cui/source/options/optgdlg.cxx
@@ -101,90 +101,6 @@ using namespace ::com::sun::star::container;
 using namespace ::com::sun::star::util;
 using namespace ::utl;
 
-namespace svt {
-
-class SkiaCfg
-{
-private:
-    bool mbUseSkia;
-    bool mbForceSkiaRaster;
-    bool mbModified;
-
-public:
-    SkiaCfg();
-    ~SkiaCfg();
-
-    bool useSkia() const;
-    bool forceSkiaRaster() const;
-
-    void setUseSkia(bool bSkia);
-    void setForceSkiaRaster(bool bSkia);
-
-    void reset();
-};
-
-SkiaCfg::SkiaCfg():
-    mbModified(false)
-{
-    reset();
-}
-
-void SkiaCfg::reset()
-{
-    mbUseSkia = officecfg::Office::Common::VCL::UseSkia::get();
-    mbForceSkiaRaster = officecfg::Office::Common::VCL::ForceSkiaRaster::get();
-    mbModified = false;
-}
-
-SkiaCfg::~SkiaCfg()
-{
-    if (!mbModified)
-        return;
-
-    try
-    {
-        std::shared_ptr<comphelper::ConfigurationChanges> batch(comphelper::ConfigurationChanges::create());
-        if (!officecfg::Office::Common::VCL::UseSkia::isReadOnly())
-            officecfg::Office::Common::VCL::UseSkia::set(mbUseSkia, batch);
-        if (!officecfg::Office::Common::VCL::ForceSkiaRaster::isReadOnly())
-            officecfg::Office::Common::VCL::ForceSkiaRaster::set(mbForceSkiaRaster, batch);
-        batch->commit();
-    }
-    catch (...)
-    {
-    }
-}
-
-bool SkiaCfg::useSkia() const
-{
-    return mbUseSkia;
-}
-
-bool SkiaCfg::forceSkiaRaster() const
-{
-    return mbForceSkiaRaster;
-}
-
-void SkiaCfg::setUseSkia(bool bSkia)
-{
-    if (bSkia != mbUseSkia)
-    {
-        mbUseSkia = bSkia;
-        mbModified = true;
-    }
-}
-
-void SkiaCfg::setForceSkiaRaster(bool bSkia)
-{
-    if (mbForceSkiaRaster != bSkia)
-    {
-        mbForceSkiaRaster = bSkia;
-        mbModified = true;
-    }
-}
-
-}
-
 // class OfaMiscTabPage --------------------------------------------------
 
 DeactivateRC OfaMiscTabPage::DeactivatePage( SfxItemSet* pSet_ )
@@ -656,7 +572,6 @@ OfaViewTabPage::OfaViewTabPage(weld::Container* pPage, weld::DialogController* p
     , pAppearanceCfg(new SvtTabAppearanceCfg)
     , pCanvasSettings(new CanvasSettings)
     , mpDrawinglayerOpt(new SvtOptionsDrawinglayer)
-    , mpSkiaConfig(new svt::SkiaCfg)
     , m_xIconSizeLB(m_xBuilder->weld_combo_box("iconsize"))
     , m_xSidebarIconSizeLB(m_xBuilder->weld_combo_box("sidebariconsize"))
     , m_xNotebookbarIconSizeLB(m_xBuilder->weld_combo_box("notebookbariconsize"))
@@ -941,8 +856,10 @@ bool OfaViewTabPage::FillItemSet( SfxItemSet* )
     if (m_xUseSkia->get_state_changed_from_saved() ||
         m_xForceSkiaRaster->get_state_changed_from_saved())
     {
-        mpSkiaConfig->setUseSkia(m_xUseSkia->get_active());
-        mpSkiaConfig->setForceSkiaRaster(m_xForceSkiaRaster->get_active());
+        std::shared_ptr<comphelper::ConfigurationChanges> batch(comphelper::ConfigurationChanges::create());
+        officecfg::Office::Common::VCL::UseSkia::set(m_xUseSkia->get_active(), batch);
+        officecfg::Office::Common::VCL::ForceSkiaRaster::set(m_xForceSkiaRaster->get_active(), batch);
+        batch->commit();
         bModified = true;
     }
 
@@ -989,7 +906,6 @@ bool OfaViewTabPage::FillItemSet( SfxItemSet* )
 void OfaViewTabPage::Reset( const SfxItemSet* )
 {
     SvtMiscOptions aMiscOptions;
-    mpSkiaConfig->reset();
 
     if (aMiscOptions.GetSymbolsSize() != SFX_SYMBOLS_SIZE_AUTO)
     {
@@ -1072,15 +988,14 @@ void OfaViewTabPage::Reset( const SfxItemSet* )
         m_xUseAntiAliase->save_state();
     }
 
-    m_xUseSkia->set_active(mpSkiaConfig->useSkia());
-    m_xForceSkiaRaster->set_active(mpSkiaConfig->forceSkiaRaster());
+    m_xUseSkia->set_active(officecfg::Office::Common::VCL::UseSkia::get());
+    m_xForceSkiaRaster->set_active(officecfg::Office::Common::VCL::ForceSkiaRaster::get());
+    m_xUseSkia->save_state();
+    m_xForceSkiaRaster->save_state();
 
     m_xFontAntiAliasing->save_state();
     m_xAAPointLimit->save_value();
     m_xFontShowCB->save_state();
-
-    m_xUseSkia->save_state();
-    m_xForceSkiaRaster->save_state();
 
     OnAntialiasingToggled(*m_xFontAntiAliasing);
     UpdateSkiaStatus();
